--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
     </div>
     
     <div class="contact-title">
-     <img src="title/Capture%20d%E2%80%99%C3%A9cran%202025-02-19%20%C3%A0%2022.55.35.png">
+     <img src="title/contact-title.png">
     </div>
     
    <section class="contact">
