--- a/printslideshow.html
+++ b/printslideshow.html
@@ -10,7 +10,7 @@
 
   <div class="slideshow-container">
     <!-- Close button to redirect back to fineart.html -->
-    <span class="close-btn" onclick="closeSlideshow()"> &#8592 Go Back</span>
+    <a href="Fineart.html"><span class="close-btn" onclick="closeSlideshow()"> &#8592 Go Back</span></a>
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
