--- a/About.html
+++ b/About.html
@@ -129,7 +129,7 @@
         <h2>Feel free to reach out!</h2>
         <p>If you have any questions, or simply want to say hi, feel free to reach out through the contact form or email me directly. I'm excited to see how we can create something amazing together.</p>
         <p class="email"><u>Email:</u>  may_studio@outlook.com</p>
-        <a href="contact.html" class="cta-button">Get in Touch</a>
+        <a href="Contact.html" class="cta-button">Get in Touch</a>
     </div>
 </section>
 
