--- a/printslideshow.html
+++ b/printslideshow.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Slideshow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="print-slideshow">
 
   <div class="slideshow-container">
-    <!-- Close button to redirect back to fineart.html -->
     <a href="Fineart.html"><span class="close-btn" onclick="closeSlideshow()"> &#8592 Go Back</span></a>
 
-    <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 15</div>
       <div class="image-text-container">
@@ -25,8 +20,8 @@
     <div class="mySlides fade">
       <div class="numbertext">2 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Two</div>
-        <div class="description">description</div>
+        <div class="bigtitle">In a Cage </div>
+        <div class="description">Woodcut on Fabriano paper</div>
         <img src="Print/cage.JPG" style="width:54%">
       </div>
     </div>
@@ -34,8 +29,8 @@
     <div class="mySlides fade">
       <div class="numbertext">3 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Candle Grief</div>
+        <div class="description">Lino cut on Fabriano paper - print 3/7</div>
         <img src="Print/candle.JPG" style="width:54%">
       </div>
     </div>
@@ -43,8 +38,8 @@
       <div class="mySlides fade">
       <div class="numbertext">4 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Desert</div>
+        <div class="description">Woodcut on Fabriano paper</div>
         <img src="Print/desert.JPG" style="width:75%">
       </div>
     </div>
@@ -52,8 +47,8 @@
       <div class="mySlides fade">
       <div class="numbertext">5 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Origins</div>
+        <div class="description">Lino cut on Fabriano paper - print 3/6</div>
         <img src="Print/face.png" style="width:65%">
       </div>
     </div>
@@ -61,8 +56,8 @@
       <div class="mySlides fade">
       <div class="numbertext">6 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Another view</div>
+        <div class="description">Woodcut on Fabriano</div>
         <img src="Print/fish.JPG" style="width:60%">
       </div>
     </div>
@@ -70,8 +65,8 @@
       <div class="mySlides fade">
       <div class="numbertext">7 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Enchanted Forest</div>
+        <div class="description">Lino cut</div>
         <img src="Print/forest.JPG" style="width:70%">
       </div>
     </div>
@@ -79,8 +74,8 @@
       <div class="mySlides fade">
       <div class="numbertext">8 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Secret garden</div>
+        <div class="description">Lino cut</div>
         <img src="Print/garden.JPG" style="width:70%">
       </div>
     </div>
@@ -88,8 +83,8 @@
       <div class="mySlides fade">
       <div class="numbertext">9 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Bird</div>
+        <div class="description">Green Lino cut</div>
         <img src="Print/grbird.JPG" style="width:70%">
       </div>
     </div>
@@ -97,8 +92,8 @@
       <div class="mySlides fade">
       <div class="numbertext">10 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Bird 2</div>
+        <div class="description">Orange Lino cut</div>
         <img src="Print/orbird.JPG" style="width:75%">
       </div>
     </div>
@@ -106,8 +101,8 @@
       <div class="mySlides fade">
       <div class="numbertext">11 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Lavender</div>
+        <div class="description">Etching</div>
         <img src="Print/lavender.JPG" style="width:67%">
       </div>
     </div>
@@ -115,8 +110,8 @@
       <div class="mySlides fade">
       <div class="numbertext">12 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Octopus</div>
+        <div class="description">Lino cut on Fabriano</div>
         <img src="Print/octo.JPG" style="width:75%">
       </div>
     </div>
@@ -125,8 +120,8 @@
       <div class="mySlides fade">
       <div class="numbertext">13 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Praying</div>
+        <div class="description">Lino cut on Fabriano</div>
         <img src="Print/viki.JPG" style="width:54%">
       </div>
     </div>
@@ -134,8 +129,8 @@
       <div class="mySlides fade">
       <div class="numbertext">14 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">Water Patterns</div>
+        <div class="description">Lino cut</div>
         <img src="Print/water.JPG" style="width:65%">
       </div>
     </div>
@@ -143,8 +138,8 @@
       <div class="mySlides fade">
       <div class="numbertext">15 / 15</div>
       <div class="image-text-container">
-        <div class="bigtitle">Caption Three</div>
-        <div class="description">description</div>
+        <div class="bigtitle">The Wave</div>
+        <div class="description">Lino cut on Fabriano 6/11</div>
         <img src="Print/wave.JPG" style="width:60%">
       </div>
     </div>
