--- a/Design.html
+++ b/Design.html
@@ -40,7 +40,6 @@
     </div>
 
     <div class="design-grid">
-        <!-- Project 1 -->
         <div class="design-card">
             <a href="Amberrun.html">
                 <img src="proimg/project1.png" alt="Project 1">
@@ -48,7 +47,6 @@
             </a>
         </div>
 
-        <!-- Project 2 -->
         <div class="design-card">
             <a href="Industry.html">
                 <img src="proimg/project2.png" alt="Project 2">
@@ -56,11 +54,17 @@
             </a>
         </div>
 
-        <!-- Project 3 -->
         <div class="design-card">
             <a href="Ozzyosbourne.html">
                 <img src="proimg/project3.png" alt="Project 3">
                 <div class="project-title">Vinyl Cover - Ozzy Osbourne</div>
+            </a>
+        </div>
+
+        <div class="design-card">
+            <a href="Classicposter.html">
+                <img src="proimg/project4.png" alt="Project 4">
+                <div class="project-title">Advertising Poster - Classical Music</div>
             </a>
         </div>
     </div>
