--- a/Ozzyosbourne.html
+++ b/Ozzyosbourne.html
@@ -31,11 +31,11 @@
             </a>
         </div>
     
-             
-        <div class="design-card">
-            <a href="Industry.html">
-                <img src="proimg/project2.png" alt="Project 2">
-                <div class="project-title">Clothing brand identity- Industry</div>
+
+             <div class="design-card">
+            <a href="Classicposter.html">
+                <img src="proimg/project4.png" alt="Project 4">
+                <div class="project-title">Advertising Poster - Classical Music</div>
             </a>
         </div>
 
