--- a/Design.html
+++ b/Design.html
@@ -8,7 +8,7 @@
 
     <div class="overlay" id="overlay"></div>
 
-    <!-- Fixed Top Navbar -->
+    <!-- Top Navbar -->
     <nav class="navbar">
         <div class="logo">
             <a href="index.html"><img src="Logo.png" alt="Logo"></a>
