--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
             <h2 class="h2specialization">What I Do</h2>
 <div class="specializations">
     
-    <a href="Amberrun.html">
+    <a href="Design.html">
     <div class="specialization-item">
         <img src="proimg/project1.png" alt="Graphic Design">
         <div class="text-overlay">
@@ -73,7 +73,7 @@
     </div>
     </a>
     
-    <a href="Industry.html">
+    <a href="Design.html">
     <div class="specialization-item">
         <img src="uxui.png" alt="UX/UI Design">
         <div class="text-overlay">
