--- a/Design.html
+++ b/Design.html
@@ -67,6 +67,13 @@
                 <div class="project-title">Advertising Poster - Classical Music</div>
             </a>
         </div>
+
+        <div class="design-card">
+            <a href="Octopusposter.html">
+                <img src="proimg/project5.png" alt="Project 4">
+                <div class="project-title">Infographic Poster - Octopus & his secrets</div>
+            </a>
+        </div>
     </div>
  
   
