--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
 
     <section class="about-me">
        <div class="first-welcome">
-    <img src="photography2.png">
+    <img src="aboutphoto.png">
     <div class="history">
         <h1>Hello, I'm Mathilde</h1>
         <p>Design is my passion, and I'm deeply committed to creating work that resonates with people. From branding to UX/UI, I thrive on turning ideas into designs that are not only visually compelling but also meaningful.</p>
