--- a/Ozzyosbourne.html
+++ b/Ozzyosbourne.html
@@ -25,17 +25,17 @@
          <div class="design-grid">
 
              <div class="design-card">
-            <a href="Amberrun.html">
-                <img src="proimg/project1.png" alt="Project 1">
-                <div class="project-title">Vinyl Cover - Amber Run</div>
+            <a href="Classicposter.html">
+                <img src="proimg/project4.png" alt="Project 4">
+                <div class="project-title">Advertising Poster - Classical Music</div>
             </a>
         </div>
     
 
              <div class="design-card">
             <a href="Classicposter.html">
-                <img src="proimg/project4.png" alt="Project 4">
-                <div class="project-title">Advertising Poster - Classical Music</div>
+                <img src="proimg/project5.png" alt="Project 4">
+                <div class="project-title">Infographic Poster - Octopus & his secrets</div>
             </a>
         </div>
 
