--- a/Octopusposter.html
+++ b/Octopusposter.html
@@ -33,9 +33,9 @@
     
              
         <div class="design-card">
-            <a href="Classicposter.html">
-                <img src="proimg/project4.png" alt="Project 2">
-                <div class="project-title">Advertising Poster - Classical Music</div>
+            <a href="Industry.html">
+                <img src="proimg/project2.png" alt="Project 2">
+                <div class="project-title">Brand Identity - Cllothing Store</div>
             </a>
         </div>
 
