--- a/Ozzyosbourne.html
+++ b/Ozzyosbourne.html
@@ -33,7 +33,7 @@
     
 
              <div class="design-card">
-            <a href="Classicposter.html">
+            <a href="Octopusposter.html">
                 <img src="proimg/project5.png" alt="Project 4">
                 <div class="project-title">Infographic Poster - Octopus & his secrets</div>
             </a>
