--- a/Industry.html
+++ b/Industry.html
@@ -31,9 +31,9 @@
         </div>
              
              <div class="design-card">
-            <a href="Amberrun.html">
-                <img src="proimg/project1.png" alt="Project 1">
-                <div class="project-title">Vinyl Cover - Amber Run</div>
+            <a href="Classicposter.html">
+                <img src="proimg/project4.png" alt="Project 1">
+                <div class="project-title">Advertising Poster - Classical Music</div>
             </a>
         </div>
     </div>
