--- a/Classicposter.html
+++ b/Classicposter.html
@@ -25,17 +25,17 @@
          <div class="design-grid">
 
              <div class="design-card">
-            <a href="Amberrun.html">
-                <img src="proimg/project3.png" alt="Project 3">
-                <div class="project-title">Vinyl Cover - Amber Run</div>
+            <a href="Octopusposter.html">
+                <img src="proimg/project5.png" alt="Project 3">
+                <div class="project-title">Infographic Poster - Octopus & his secrets</div>
             </a>
         </div>
     
              
         <div class="design-card">
-            <a href="Industry.html">
-                <img src="proimg/project2.png" alt="Project 2">
-                <div class="project-title">Clothing brand identity- Industry</div>
+            <a href="Amberrun.html">
+                <img src="proimg/project1.png" alt="Project 2">
+                <div class="project-title">Viny Cover - Amber Run</div>
             </a>
         </div>
 
