--- a/Classicposter.html
+++ b/Classicposter.html
@@ -26,16 +26,16 @@
 
              <div class="design-card">
             <a href="Octopusposter.html">
-                <img src="proimg/project5.png" alt="Project 3">
+                <img src="proimg/project5.png" alt="Project 5">
                 <div class="project-title">Infographic Poster - Octopus & his secrets</div>
             </a>
         </div>
     
              
         <div class="design-card">
-            <a href="Amberrun.html">
-                <img src="proimg/project1.png" alt="Project 2">
-                <div class="project-title">Viny Cover - Amber Run</div>
+            <a href="Badger.html">
+                <img src="proimg/project6.png" alt="Project 6">
+                <div class="project-title">Packaging/Branding - Badger Whiskey</div>
             </a>
         </div>
 
