--- a/Design.html
+++ b/Design.html
@@ -75,8 +75,15 @@
 
         <div class="design-card">
             <a href="Octopusposter.html">
-                <img src="proimg/project5.png" alt="Project 4">
+                <img src="proimg/project5.png" alt="Project 5">
                 <div class="project-title">Infographic Poster - Octopus & his secrets</div>
+            </a>
+        </div>
+
+        <div class="design-card">
+            <a href="Badger.html">
+                <img src="proimg/project6.png" alt="Project 6">
+                <div class="project-title">Packaging/Branding - Badger Whiskey</div>
             </a>
         </div>
     </div>
