--- a/Industry.html
+++ b/Industry.html
@@ -8,9 +8,9 @@
         <div class="logo">
             <a href="index.html"><img src="Logo.png" alt="Logo"></a>
         </div>
-        <div class="menu-icon" id="menu-icon">
-            <span class="material-icons">menu</span>
-        </div>
+         <div class="close-btn1">
+                <a href="Design.html">&#10005;</a>
+            </div>
     </nav>
         
        
