--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,10 @@
 <html>
 <head>
     <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
