--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
 
     <!-- Header Section (White background, centered image) -->
     <div class="header">
-        <img src="BannerSans.png" alt="Header Image" class="header-image">
-        <div class="header-text">
-            <h1>PORTFOLIO</h1>
-            <h2>DESIGN | PHOTOGRAPHY | FINE ART</h2>
+        <video controls loop width="100%" height="auto">
+  <source src="motion.mp4" type="video/mp4">
+    </video>
         </div>
     </div>
     
