--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Header Section (White background, centered image) -->
     <div class="header">
-        <video controls loop width="100%" height="auto">
+        <video autoplay loop width="100%" height="auto" padding-top="1%" margin-bottom="2%">
   <source src="motion.mp4" type="video/mp4">
     </video>
         </div>
