--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <!-- Header Section (White background, centered image) -->
     <div class="header">
-        <video autoplay loop width="100%" height="auto" padding-top="1%" margin-bottom="2%">
-  <source src="motion.mp4" type="video/mp4">
-    </video>
+        <video width="100%" height="auto" autoplay loop>
+  <source src="motion.mp4" type="video/mp4" />
+</video>
         </div>
     </div>
     
