--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Header Section (White background, centered image) -->
     <div class="header">
-        <video width="100%" height="auto" autoplay loop>
+        <video width="100%" height="auto" autoplay muted loop>
   <source src="motion.mp4" type="video/mp4" />
 </video>
         </div>
