--- a/Design.html
+++ b/Design.html
@@ -88,6 +88,13 @@
                 <div class="project-title">Packaging/Branding - Badger Whiskey</div>
             </a>
         </div>
+
+        <div class="design-card">
+            <a href="illustration.html">
+                <img src="proimg/project7.png" alt="Project 7">
+                <div class="project-title">Illustration - Poems' Book</div>
+            </a>
+        </div>
     </div>
  
   
